[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pyodide-build"
authors = [{name = "Pyodide developers"}]
description = '"Tools for building Pyodide"'
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent",
]
license = {text = "MPL-2.0"}
requires-python = ">=3.12"
dependencies = [
    "build~=1.2.0",
    "pyodide-cli>=0.4.1",
    "pyodide-lock~=0.1.0",
    "auditwheel-emscripten~=0.2.0",
    "pydantic>=2,<3",
    "wheel",
    "ruamel.yaml",
    "packaging",
    "virtualenv",
    "requests",
    "click",
    "rich",
    "platformdirs",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/pyodide/pyodide-build"
"Bug Tracker" = "https://github.com/pyodide/pyodide-build/issues"
Documentation = "https://pyodide.org/en/stable/"

[project.entry-points."pipx.run"]
pyodide = "pyodide_cli.__main__:main"

[project.entry-points."pyodide.cli"]
build = "pyodide_build.cli.build:main"
clean = "pyodide_build.cli.clean:app"
build-recipes = "pyodide_build.cli.build_recipes:build_recipes"
build-recipes-no-deps = "pyodide_build.cli.build_recipes:build_recipes_no_deps"
venv = "pyodide_build.cli.venv:main"
skeleton = "pyodide_build.cli.skeleton:app"
py-compile = "pyodide_build.cli.py_compile:main"
config = "pyodide_build.cli.config:app"
xbuildenv = "pyodide_build.cli.xbuildenv:app"

[project.optional-dependencies]
resolve = [
    "resolvelib",
    "unearth~=0.6",
]
test = [
    "pytest",
    "pytest-httpserver",
    "pytest-cov",
    "types-requests",
]
uv = [
  "build[uv]~=1.2.0",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
exclude = [
    "/pyodide_build/tests",
]

[tool.pytest.ini_options]
addopts = "-vra --strict-markers"
markers = [
  "integration: mark a test as an integration test"
]

[tool.mypy]
python_version = "3.12"
mypy_path = ["pyodide_build"]
show_error_codes = true
warn_unreachable = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
plugins = ["pydantic.mypy"]

# Strict checks
warn_unused_configs = true
check_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = false
disallow_untyped_calls = false
disallow_untyped_defs = false
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = false
no_implicit_reexport = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
  "loky",
  "resolvelib",
  "ruamel.yaml",
  "termcolor",
  "test",
  "tomli",
  "tomllib",
  "unearth",
  "unearth.*",
  "virtualenv>=20.31.2",
  "auditwheel_emscripten.*"
]
ignore_missing_imports = true


[tool.ruff]
lint.exclude = ["pyodide_build/vendor/*"]
lint.select = [
  "ASYNC",  # flake8-async
  "B0",     # bugbear (all B0* checks enabled by default)
  "B904",   # bugbear (Within an except clause, raise exceptions with raise ... from err)
  "B905",   # bugbear (zip() without an explicit strict= parameter set.)
  "C4",     # flake8-comprehensions
  "C9",     # mccabe complexity
  "E",      # pycodestyles
  "F",      # pyflakes
  "G004",   # f-string logging should be avoided
  "I",      # isort
  "PERF",   # Perflint
  "PGH",    # pygrep-hooks
  "PL",     # Pylint
  "UP",     # pyupgrade
  "W",      # pycodestyles
]

lint.logger-objects = ["pyodide_build.logger.logger"]

lint.ignore = ["E402", "E501", "E731", "E741", "PERF401", "PLW2901", "UP038", "PLR0912", "PLC0415"]
# line-length = 219  # E501: Recommended goal is 88 to match black
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
"src/py/_pyodide/_base.py" = [
  "PGH001",  # No builtin `eval()` allowed
]
"src/tests/test_jsproxy.py" = [
  "PGH001",  # No builtin `eval()` allowed
]
"src/tests/test_typeconversions.py" = [
  "PGH001",  # No builtin `eval()` allowed
]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = []

[tool.ruff.lint.isort]
known-first-party = [
  "pyodide_build",
]
known-third-party = [
  "build",
  "pyodide_lock",
]

[tool.ruff.lint.mccabe]
max-complexity = 31  # C901: Recommended goal is 10

[tool.ruff.lint.pylint]
allow-magic-value-types = ["bytes", "int", "str"]
max-args = 20        # Default is 5
max-branches = 27    # Default is 12
max-returns = 12     # Default is 6
max-statements = 67  # Default is 50

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.pyodide.build]
default_cross_build_env_url = "https://github.com/pyodide/pyodide-build-environment-nightly/releases/download/20260220/xbuildenv.tar.bz2"
